Update SYG DONATION RECEIPT.html

--- a/SYG DONATION RECEIPT.html
+++ b/SYG DONATION RECEIPT.html
@@ -110,7 +110,7 @@
 </style>
 
 <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
-<script src="D:\FZ\FZ\SYG\SYG_DONATION_RECEIPT.js"></script>
+<script src="https://graceful-zuccutto-12eda0.netlify.app/SYG_DONATION_RECEIPT.js"></script>
 </head>
 <body>
 
@@ -329,3 +329,4 @@ function clearForm() {
 
 </body>
 </html>
+
